<resources>
    <string name="app_name">Pogodynka</string>
    <string name="gps">GPS</string>
    <string name="search">Wyszukaj</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
</resources>